# cycle-match

./: .sample.env  README.md  docker-compose.yml  setup.sh
backend/: Cargo.toml  Dockerfile
backend/data/: taiwan_districts.json  taiwan_elementary_subject.json
backend/src/: db.rs  main.rs  matcher.rs  model.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AnnouncementBanner.tsx  ControlPanel.tsx  DebugDropdown.tsx  DebugModeToggle.tsx  DebugTools.tsx  EditTeacherForm.tsx  LocationSelector.tsx  MatchCard.tsx  MatchList.tsx  MatchResult.tsx  MatchResults.tsx  Modal.tsx  PreviewSection.tsx  ProtectedRoute.tsx  SharedLayout.tsx  SubjectSelector.tsx  TeacherActionButtons.tsx  TeacherForm.tsx  TeacherFormContainer.tsx  TeacherInfoModal.tsx  TeacherList.tsx  TeacherProfileCard.tsx  TeacherProfilePage.tsx  TeacherSelectionModal.tsx  TeacherSwitcher.tsx  UserDropdown.tsx  UserHeader.tsx  WelcomeBanner.tsx
frontend/src/pages/: Debug.tsx  Home.tsx  Login.tsx  MatchPage.tsx  MatchResults.tsx  NewTeacherForm.tsx  NotFound.tsx  Teacher.tsx  TeacherProfile.tsx
frontend/src/services/: ApiService.ts
frontend/src/styles/: EditTeacherForm.module.css  MatchCard.module.css  TeacherActionButtons.module.css  antd-custom.css  index.css  mobile.css
frontend/src/types/: index.ts
frontend/src/utils/: index.ts  locationUtils.ts  matchUtils.ts  subjectUtils.ts  teacherUtils.ts
(+17 files in other folders)
