[package]
name = "circlematch-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "time", "chrono"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.7", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19.0"
itertools = "0.10.5"